# STM32H735G-DK

./: .gitignore  CHANGES.md  CMakeLists.txt  README.md  bootstrap.cmake  designlab.json  profile.sh  sl_report.txt  sl_settings.json  sl_workspace_settings.json
SDK/: CMakeLists.txt  depends.code-workspace  lv_conf.h
SDK/config/: lv_conf.h  lwipopts.h  sos_config.h  stm32h7xx_hal_conf.h
SDK/config/mbedtls/: config.h
STM32H735G-DK/: CMakeLists.txt  sl_settings.json
STM32H735G-DK/boot/: CMakeLists.txt  boot_config.c  boot_config.h  boot_link_config.c
STM32H735G-DK/ldscripts/: stm32h735xg-rom.ld  stm32h7xx.ld
STM32H735G-DK/src/: CMakeLists.txt  config.h  sl_config.h
STM32H735G-DK/src/config/: cache_config.c  clock_config.c  clock_config.h  debug_config.c  debug_config.h  devfs_config.c  fs_config.c  fs_config.h  link_config.c  lvgl_config.c  lvgl_config.h  mcu_config.c  os_config.c  os_config.h  sos_config.c  stm32_config.c  symbols_config.c  sys_config.c  sys_config.h  usb_config.c
STM32H735G-DK/src/config/fonts/: CMakeLists.txt  montserrat_i_12.c  montserrat_i_16.c  montserrat_i_20.c  montserrat_i_24.c  montserrat_i_28.c  montserrat_i_44.c  montserrat_i_56.c  montserrat_i_72.c  montserrat_i_8.c  montserrat_l_12.c  montserrat_l_16.c  montserrat_l_20.c  montserrat_l_24.c  montserrat_l_28.c  montserrat_l_44.c  montserrat_l_56.c  montserrat_l_72.c  montserrat_l_8.c  montserrat_r_12.c  montserrat_r_16.c  montserrat_r_20.c  montserrat_r_24.c  montserrat_r_28.c  montserrat_r_44.c  montserrat_r_56.c  montserrat_r_72.c  montserrat_r_8.c  montserrat_sb_12.c  montserrat_sb_16.c  montserrat_sb_20.c  montserrat_sb_24.c  montserrat_sb_28.c  montserrat_sb_44.c  montserrat_sb_56.c  montserrat_sb_72.c  montserrat_sb_8.c  sourcecode_r_12.c  sourcecode_r_16.c  sourcecode_r_20.c  (+6 more)
STM32H735G-DK/src/designlab/: CMakeLists.txt
STM32H735G-DK/src/designlab/fonts/: FontAwesomeIcons.hpp  fonts.c  fonts.h  montserrat_r_11.c  montserrat_r_12.c  montserrat_r_14.c  montserrat_r_17.c  montserrat_r_20.c  montserrat_r_24.c  montserrat_sb_12.c  sourcecode_r_12.c  sourcecode_r_4.c  sourcecode_r_6.c  sourcecode_r_8.c
STM32H735G-DK/src/designlab/themes/: default_dark_small.c  default_light_small.c  themes.c  themes.h
STM32H735G-DK/src/stm32/: SystemClock_Config.c  stm32h735g-dk.c  stm32h735g_discovery_bus.h  stm32h735g_discovery_conf.h  stm32h735g_discovery_errno.h  stm32h735g_discovery_ospi.c  stm32h735g_discovery_ospi.h  stm32h735g_discovery_ts.c  stm32h735g_discovery_ts.h
STM32H735G-DK/src/stm32/mx25lm51245g/: mx25lm51245g_conf.h
apps/: CMakeLists.txt
boot/: CMakeLists.txt  boot_config.c  boot_config.h  boot_link_config.c  boot_link_config.h
designlab/: CMakeLists.txt
designlab/assets/: icon-64x64.image
designlab/fonts/: montserrat_r_11.c  montserrat_r_12.c  montserrat_r_14.c  montserrat_r_17.c  montserrat_r_20.c  montserrat_r_24.c  montserrat_sb_12.c  sourcecode_r_12.c  sourcecode_r_4.c  sourcecode_r_6.c  sourcecode_r_8.c
designlab/themes/: default_dark_small.c  default_light_small.c  fonts.json  theme-dark-small.json  theme-light-small.json
fonts/: CMakeLists.txt
src/: CMakeLists.txt  config.h  sl_config.h
src/config/: cache_config.c  cache_config.h  clock_config.c  debug_config.c  debug_config.h  devfs_config.c  devfs_config.h  fs_config.c  fs_config.h  kernel_request.c  link_config.c  link_config.h  lvgl_config.c  lvgl_config.h  mcu_config.c  mcu_config.h  os_config.c  os_config.h  sleep_config.c  sleep_config.h  sos_config.c  stm32_config.c  symbols_config.c  sys_config.c  sys_config.h  usb_config.c  usb_config.h
src/stm32/: SystemClock_Config.c  stm32h735g-dk.c  stm32h735g-dk.h  stm32h735g_discovery.c  stm32h735g_discovery.h  stm32h735g_discovery_audio.c  stm32h735g_discovery_audio.h  stm32h735g_discovery_bus.c  stm32h735g_discovery_conf.h  stm32h735g_discovery_lcd.c  stm32h735g_discovery_lcd.h  stm32h735g_discovery_sd.c  stm32h735g_discovery_sd.h
src/stm32/s70kl1281/: s70kl1281_conf.h
src/stm32/wm8994/: wm8994_reg.h
